export enum InputType {
  DUMMY = 'DUMMY',
  SURVEY = 'SURVEY',
  MIC = 'MIC',
  //  Geolocation API https://www.webondevices.com/9-javascript-apis-accessing-device-sensors/#geolocation-api
  GEOLOCATION = 'GEOLOCATION',
  ACCELEROMETER = 'Accelerometer',
  GYROSCOPE = 'Gyroscope',
  LINEAR_ACCELERATION = 'LinearAccelerationSensor',
  ABSOLUTE_ORIENTATION = 'AbsoluteOrientationSensor',
  RELATIVE_ORIENTATION = 'RelativeOrientationSensor',
  GRAVITY = 'GravitySensor',
  MAGNETOMETER = 'Magnetometer',
  // Device Light API https://www.webondevices.com/9-javascript-apis-accessing-device-sensors/#device-light-api
  DEVICE_LIGHT = 'DEVICE_LIGHT',
  // Battery Manager API https://www.webondevices.com/9-javascript-apis-accessing-device-sensors/#battery-manager-api
  BATTERY = 'BATTERY',
  // Proximity Events API https://www.webondevices.com/9-javascript-apis-accessing-device-sensors/#proximity-events-api
  PROXIMITY = 'PROXIMITY',
  CAMERA = 'CAMERA'
}
