export enum QuestionType {
  TEXT = 'TEXT',
  LARGE_TEXT = 'LARGE_TEXT',
  SINGLE_CHOICE = 'SINGLE_CHOICE',
  MULTIPLE_CHOICE = 'MULTIPLE_CHOICE',
  ORDINAL_SCALE = 'ORDINAL_SCALE'
}
