@startuml
component Inputs {
    enum InputType {
      SURVEY,
      MIC,
      GEOLOCATION
    }

    interface Sensor {
      +readonly key: InputType
      +readonly availableIconKey: string
      +readonly unavailableIconKey: string
      +isAvailable: boolean
      +isActive: boolean
      +isCalibrated: boolean

      +checkAvailability (): Promise<void>
    }
    Sensor --> InputType

    class GeolocationSensor implements Sensor
    class MicSensor implements Sensor
    class SurveySensor implements Sensor
}

component Tasks {
    class Task {
      +readonly id: number
      +readonly title: string
      +readonly description: string
      +readonly inputDescriptions: { [inputType: string]: string }
      +readonly steps: Array<TaskStep>
      +readonly resultActivityComponentName?: string
      +approved: boolean

      +getInputs (): Array<InputType>
    }

    class TaskStep {
      +readonly id: string
      +readonly title: string
      +readonly description: string
      +readonly instructions: Array<ITaskStepInstruction>
      +readonly activityComponentName: string
      +readonly inputTypes: Array<InputType>
      +readonly resultActivityComponentName: string
    }

    class SurveyTaskStep extends TaskStep {
      +readonly questions: Map<string, Question>
    }

    class Question {
      +readonly id: string
      +readonly type: QuestionType
      +readonly title: string
      +readonly question: string
      +readonly options?: any
      +answer?: object | number | string | boolean
    }

    enum QuestionType {
      TEXT,
      LARGE_TEXT,
      SINGLE_CHOICE,
      MULTIPLE_CHOICE,
      ORDINAL_SCALE'
    }

    class SensorTaskStep  extends TaskStep {}

    interface ITaskStepInstruction {
      title: string,
      image?: IImage,
      description: string
    }

    Task --> TaskStep
    Task --> InputType
    TaskStep --> InputType
    SurveyTaskStep --> Question
    Question --> QuestionType
    TaskStep --> ITaskStepInstruction

    class Result {
      +readonly measurements: Map<string, number | string | boolean>
      +readonly metas: Map<string, number | string | boolean>

      +addMeta (key: string, value: number | string | boolean)
      +addMeasurement (key: string, value: number | string | boolean)
    }

    class TaskStepResult {
      +readonly taskStep: TaskStep
      +readonly results: Array<Result>
      +readonly timestamp: number
    }
    TaskStepResult -left-> TaskStep
    TaskStepResult --> Result
}

component shared {
    interface InfluxDBConvertable {
      toInfluxPoints (): Array<Point>
    }

    interface ThingsboardConvertable {
      toTBTelemetries (): Array<TBPoint>
    }

    interface LogDBConvertable {
      toIDB (): IIDBLogTask
    }
}

component Log {
    class LogTask implements InfluxDBConvertable, ThingsboardConvertable, LogDBConvertable {
        +readonly pKey?: number
        +readonly id: number
        +readonly title: string
        +readonly checkInTimestamp: number
        +readonly steps: Array<LogTaskStep>
        +readonly resultActivityComponentName: string | undefined
        +transmitted: boolean

        +static fromResults (task: Task, stepsResults: Array<TaskStepResult>): LogTask
        +static fromIDB (idbLog: IIDBLogTask | undefined): LogTask | undefined
    }

    class LogTaskStep {
      +readonly id: string
      +readonly title: string
      +readonly timestamp: number
      +readonly inputTypes: Array<InputType>
      +readonly results: Array<LogTaskStepResult>
      +readonly resultActivityComponentName?: string

      +static fromResults (taskStep: TaskStep, taskStepResult: TaskStepResult): LogTaskStep
      +static fromIDB (idbLogTaskStep: IIDBLogTaskStep): LogTaskStep
      +toInfluxPoints (taskId: string): Array<Point>
      +toTBTelemetries (taskId: string): Array<TBPoint>
      +toIDB (): IIDBLogTaskStep
    }
    LogTask --> LogTaskStep

    class LogTaskStepResult {
      +readonly metas: Map<string, number | string | boolean>
      +readonly measurements: Map<any, number | string | boolean>

      +static fromTaskResult (taskResult: Result)
      +static fromIDB (idbResult: IIDBLogTaskStepResult): LogTaskStepResult
      +toIDB (): IIDBLogTaskStepResult
    }
    LogTaskStep --> LogTaskStepResult
}
@enduml
